force-app/main/default/objects/sugati__Supplier_Cost_Payment__c/sugati__Supplier_Cost_Payment__c.object-meta.xml
<CustomObject>
    <label>Supplier Cost &amp; Payment</label>
    <nameField>
        <displayFormat>SCP-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Costs &amp; Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>