force-app/main/default/objects/sugati__Supplier_Cost_Payment__c/fields/sugati__S_SCP_Actual_Agency_Commission_Due__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SCP_Actual_Agency_Commission_Due__c</fullName>
    <formula>IF(
    sugati__SCP_Is_Agent__c == TRUE, 
    sugati__SCP_Opportunity__r.sugati__S_O_Total_Agent_Commission_Due_Booking__c, 
    null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Agency Commission Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>