force-app/main/default/objects/sugati__Supplier_Cost_Payment__c/fields/sugati__S_SCP_Deferred_Commission_Received__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SCP_Deferred_Commission_Received__c</fullName>
    <label>Deferred Commission Received</label>
    <summarizedField>sugati__Supplier_Payment__c.sugati__SP_Payment_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>sugati__Supplier_Payment__c.sugati__SP_Payment_Date__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>sugati__Supplier_Payment__c.sugati__SB_Payment_Type__c</field>
        <operation>equals</operation>
        <value>Deferred Commission</value>
    </summaryFilterItems>
    <summaryForeignKey>sugati__Supplier_Payment__c.sugati__SBP_Supplier_Cost_Currency_Value__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>