force-app/main/default/objects/sugati__Supplier_Cost_Payment__c/fields/sugati__S_SCP_Deferred_Supplier_Commission__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SCP_Deferred_Supplier_Commission__c</fullName>
    <label>Deferred Supplier Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>