force-app/main/default/objects/sugati__Supplier_Cost_Payment__c/fields/sugati__S_SCP_Is_Agency_Commission_Correct__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SCP_Is_Agency_Commission_Correct__c</fullName>
    <formula>sugati__S_SCP_Actual_Agency_Commission_Due__c == sugati__SCP_Total__c</formula>
    <label>Is Agency Commission Correct?</label>
    <type>Checkbox</type>
</CustomField>