force-app/main/default/objects/sugati__Supplier_Cost_Payment__c/fields/sugati__S_SCP_Net_Total__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SCP_Net_Total__c</fullName>
    <formula>sugati__SCP_Total__c - sugati__S_SCP_Deferred_Supplier_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>