force-app/main/default/objects/sugati__Supplier_Cost_Payment__c/fields/sugati__S_SCP_Outstanding_Deferred_Commission__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SCP_Outstanding_Deferred_Commission__c</fullName>
    <formula>sugati__S_SCP_Deferred_Supplier_Commission__c - sugati__S_SCP_Deferred_Commission_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outstanding Deferred Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>