force-app/main/default/objects/sugati__Supplier_Cost_Payment__c/fields/sugati__S_SCP_Payment_Amount_in_Booking_Currency__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SCP_Payment_Amount_in_Booking_Currency__c</fullName>
    <label>Payment Amount in Booking Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>