force-app/main/default/objects/sugati__Supplier_Cost_Payment__c/fields/sugati__S_SCP_Supp_to_Corp_Currency_FX_Rate__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SCP_Supp_to_Corp_Currency_FX_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier to Corporate Currency FX Rate</label>
    <referenceTo>sugati__Exchange_Rate__c</referenceTo>
    <relationshipLabel>Supplier Costs &amp; Payments (Supplier to Corporate Currency FX Rate)</relationshipLabel>
    <relationshipName>Supplier_Costs_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>