force-app/main/default/objects/sugati__Supplier_Cost_Payment__c/fields/sugati__S_SCP_Total_Outstanding_in_Corp_Curr__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SCP_Total_Outstanding_in_Corp_Curr__c</fullName>
    <formula>sugati__SCP_Outstanding_Amount__c / sugati__S_SCP_Supp_to_Corp_Currency_FX_Rate__r.sugati__ER_Exchange_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Outstanding in Corporate Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>