force-app/main/default/objects/sugati__Supplier_Cost_Payment__c/fields/sugati__S_SCP_Total_Paid_in_Corporate_Currency__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SCP_Total_Paid_in_Corporate_Currency__c</fullName>
    <formula>sugati__SCP_Total_Payment__c / sugati__S_SCP_Supp_to_Corp_Currency_FX_Rate__r.sugati__ER_Exchange_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Paid in Corporate Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>