force-app/main/default/objects/sugati__Supplier_Cost_Payment__c/fields/sugati__SCC_Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>sugati__SCC_Opportunity_Stage__c</fullName>
    <formula>Text(sugati__SCP_Opportunity__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Stage</label>
    <type>Text</type>
</CustomField>