force-app/main/default/objects/sugati__Supplier_Cost_Payment__c/fields/sugati__SCP_Extra_Items__c.field-meta.xml
<CustomField>
    <fullName>sugati__SCP_Extra_Items__c</fullName>
    <label>Extra Items</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>