force-app/main/default/objects/sugati__Supplier_Cost_Payment__c/fields/sugati__SCP_Included_Components__c.field-meta.xml
<CustomField>
    <fullName>sugati__SCP_Included_Components__c</fullName>
    <label>Included Components</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sugati__SB_Components</valueSetName>
    </valueSet>
</CustomField>