force-app/main/default/objects/sugati__Supplier_Cost_Payment__c/fields/sugati__SCP_Is_Agent__c.field-meta.xml
<CustomField>
    <fullName>sugati__SCP_Is_Agent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Agent</label>
    <type>Checkbox</type>
</CustomField>