force-app/main/default/objects/sugati__Supplier_Cost_Payment__c/fields/sugati__SCP_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>sugati__SCP_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Supplier Costs &amp; Payments</relationshipLabel>
    <relationshipName>Supplier_Cost_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>