force-app/main/default/objects/sugati__Supplier_Cost_Payment__c/fields/sugati__SCP_Overwrite_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>sugati__SCP_Overwrite_Exchange_Rate__c</fullName>
    <label>Overwrite Exchange Rate</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>