force-app/main/default/objects/sugati__Supplier_Cost_Payment__c/fields/sugati__SCP_ROE__c.field-meta.xml
<CustomField>
    <fullName>sugati__SCP_ROE__c</fullName>
    <formula>sugati__SCP_Exchange_Rate__r.sugati__ER_Exchange_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Costing ROE</inlineHelpText>
    <label>ROE</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>