force-app/main/default/objects/sugati__Supplier_Cost_Payment__c/fields/sugati__SCP_Supplier__c.field-meta.xml
<CustomField>
    <fullName>sugati__SCP_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>sugati__Supplier__c</referenceTo>
    <relationshipLabel>Supplier Costs &amp; Payments</relationshipLabel>
    <relationshipName>Supplier_Cost_payments</relationshipName>
    <type>Lookup</type>
</CustomField>