force-app/main/default/objects/sugati__Supplier_Cost_Payment__c/fields/sugati__SCP_Supplier_Currency__c.field-meta.xml
<CustomField>
    <fullName>sugati__SCP_Supplier_Currency__c</fullName>
    <formula>TEXT(sugati__SCP_Exchange_Rate__r.sugati__ER_Base_Currency__c)</formula>
    <label>Supplier Currency</label>
    <type>Text</type>
</CustomField>