force-app/main/default/objects/sugati__Supplier_Cost_Payment__c/fields/sugati__SCP_Supplier_Service_To__c.field-meta.xml
<CustomField>
    <fullName>sugati__SCP_Supplier_Service_To__c</fullName>
    <label>Supplier Service To Date</label>
    <type>Date</type>
</CustomField>