force-app/main/default/objects/sugati__Supplier_Cost_Payment__c/fields/sugati__SCP_Supplier_Voucher__c.field-meta.xml
<CustomField>
    <fullName>sugati__SCP_Supplier_Voucher__c</fullName>
    <formula>IF(UPPER(TEXT(sugati__SCP_Opportunity__r.StageName)) == UPPER($Setup.sugati__Sugati_Stage_Name_Mapping__c.sugati__Booked__c), HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + &apos;apex/&apos; + $Setup.sugati__Site__c.sugati__Namespace__c + &apos;SupplierVouchers?id=&apos; + sugati__SCP_Opportunity__r.Id + &apos;&amp;supplierid=&apos; + sugati__SCP_Supplier__r.Id + &apos;&amp;oppid=&apos; + sugati__SCP_Opportunity__r.Id, sugati__SCP_Opportunity__r.Name, &apos;_blank&apos;), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Voucher</label>
    <type>Text</type>
</CustomField>