force-app/main/default/objects/sugati__Supplier_Cost_Payment__c/fields/sugati__SCP_Total_Cost_in_GBP__c.field-meta.xml
<CustomField>
    <fullName>sugati__SCP_Total_Cost_in_GBP__c</fullName>
    <formula>sugati__SCP_Total__c /  sugati__SCP_ROE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost in GBP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>