force-app/main/default/objects/sugati__Supplier_Cost_Payment__c/fields/sugati__SCP_Total_Payment__c.field-meta.xml
<CustomField>
    <fullName>sugati__SCP_Total_Payment__c</fullName>
    <label>Total Payment</label>
    <summarizedField>sugati__Supplier_Payment__c.sugati__P_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>sugati__Supplier_Payment__c.sugati__SP_Payment_Date__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>sugati__Supplier_Payment__c.sugati__SBP_Supplier_Cost_Currency_Value__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>