force-app/main/default/objects/sugati__Supplier_Cost_Payment__c/fields/sugati__SCP_Total_Payment_All__c.field-meta.xml
<CustomField>
    <fullName>sugati__SCP_Total_Payment_All__c</fullName>
    <label>Total Payment(All)</label>
    <summarizedField>sugati__Supplier_Payment__c.sugati__P_Amount__c</summarizedField>
    <summaryForeignKey>sugati__Supplier_Payment__c.sugati__SBP_Supplier_Cost_Currency_Value__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>