force-app/main/default/objects/sugati__Supplier_Cost_Payment__c/fields/sugati__SCP_Unqueued_Payment__c.field-meta.xml
<CustomField>
    <fullName>sugati__SCP_Unqueued_Payment__c</fullName>
    <formula>sugati__SCP_Total__c - sugati__SCP_Total_Payment_All__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unqueued Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>