force-app/main/default/objects/sugati__Supplier_Cost_Payment__c/fields/sugati__SCP_VAT_Amount__c.field-meta.xml
<CustomField>
    <fullName>sugati__SCP_VAT_Amount__c</fullName>
    <label>VAT Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>