force-app/main/default/objects/sugati__Supplier_Cost_Payment__c/fields/sugati__SCP_Without_Supplier_Cost__c.field-meta.xml
<CustomField>
    <fullName>sugati__SCP_Without_Supplier_Cost__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If you want the system to ignore this record while checking for the deletion then please tick the checkbox.</inlineHelpText>
    <label>SCP Without Supplier Cost</label>
    <type>Checkbox</type>
</CustomField>